# example-async-app

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile  page.txt  test.sh
src/: action.rs  browse.rs  cli.rs  lib.rs  main.rs  types.rs
tests/: method.rs
