[package]
name = "myrepl"
version = "0.1.0"
authors = ["Reza Handzalah <reza.handzalah@mbiz.co.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.0"
eyre = "0.6.6"
rustyline = "9.1.0"
# thirtyfour = "0.28.1"
# thirtyfour = { git = "https://github.com/tbmreza/thirtyfour", branch = "logs-command" }
thirtyfour = { path = "../thirtyfour" }
tokio = { version = "1.16.1", features = ["full"] }
