[package]
name = "myrepl"
version = "0.1.0"
authors = ["Reza Handzalah <reza.handzalah@mbiz.co.id>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ['unstable'] }
case_style = "0.2.1"
clap = { version = "3.1.5", features = ["derive"] }
color-eyre = "0.6.0"
eyre = "0.6.6"
regex = "1.5.5"
rustyline = "9.1.0"
serde = "1.0.136"
serde_json = "1.0.79"
strum = "0.24.0"
strum_macros = "0.24.0"
# thirtyfour = "0.28.1"
# thirtyfour = { git = "https://github.com/tbmreza/thirtyfour", branch = "logs-command" }
thirtyfour = { path = "../thirtyfour" }
tokio = { version = "1.16.1", features = ["full"] }
